--- a/app/views/resource_import_files/show.html.erb
+++ b/app/views/resource_import_files/show.html.erb
@@ -35,7 +35,7 @@
 
 <p>
   <strong><%= t('activerecord.attributes.resource_import_file.imported_at') -%>:</strong>
-  <%= l(@resource_import_file.imported_at) if @resource_import_file.imported_at -%>
+  <%= @resource_import_file.imported_at if @resource_import_file.imported_at -%>
 </p>
 
 <p>
