refs5294 ルビの修正

--- a/app/views/users/_edit_credential.html.erb
+++ b/app/views/users/_edit_credential.html.erb
@@ -1,7 +1,7 @@
 <script>
 jQuery(function(){
-  $('#patron_last_name').auto_ruby($('#patron_last_name_transcription'))
-  $('#patron_first_name').auto_ruby($('#patron_first_name_transcription'))
+  new AutoKana('patron_last_name', 'patron_last_name_transcription', { katakana:true, toggle:false })
+  new AutoKana('patron_first_name', 'patron_first_name_transcription', { katakana:true, toggle:false })
 })
 </script>
 
