--- a/app/views/manifestations/_form.html.erb
+++ b/app/views/manifestations/_form.html.erb
@@ -1,6 +1,6 @@
 <script>
 jQuery(function(){
-  $('#manifestation_original_title').auto_ruby($('#manifestation_title_transcription'))
+  new AutoKana('manifestation_original_title', 'manifestation_title_transcription', { katakana:true, toggle:false });
 })
 </script>
 
