--- a/app/views/page/extensions.html.erb
+++ b/app/views/page/extensions.html.erb
@@ -29,13 +29,22 @@
       <ul>
         <li><%= link_to t('activerecord.models.loss_item'), loss_items_path -%></li>
         <li><%= link_to t('activerecord.models.reminder_list'), reminder_lists_path -%></li>
-			</ul>
-			<br />
-			<ul>
+      </ul>
+      <br />
+      <ul>
         <li><%= link_to t('exchange_manifestation.title'), new_exchange_manifestation_path -%></li>
       </ul>
-			</div>
     </div>
+  </div>
+</div>
 
+<div class="column ui-sortable" id="col2">  
+  <div class="portlet" id="other">
+    <h2 class="title"><%= t('page.relationship') %></h2>
+    <div class="config_box">
+      <ul>
+        <li><%= link_to t('activerecord.models.relationship_family'), relationship_families_path %></li>
+      </ul>
+    </div> 
   </div>
 </div>
